<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="me.raptor.resellingapp.activity.PurchasesActivity">
    <item
        android:id="@+id/action_new_button"
        android:orderInCategory="100"
        android:icon="@drawable/add"
        android:title="@string/newButton"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_save_button"
        android:orderInCategory="100"
        android:icon="@drawable/save"
        android:title="@string/saveButton"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_edit_button"
        android:orderInCategory="100"
        android:icon="@drawable/edit"
        android:title="@string/editButton"
        app:showAsAction="always" />
</menu>
