<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_bg"

        android:padding="10dp"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_group"
            style="@style/PrincipalTextStyle"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:paddingRight="5dp"/>
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/title"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:paddingLeft="5dp"
            android:textStyle="italic"
            android:background="@drawable/item_bg"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            style="@style/SecondaryTextStyle"
            android:hint="@string/new_group" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textStyle="bold"
            android:background="@drawable/counter_red_bg"
            style="@style/PrincipalTextStyle"
            android:text="@string/edit_product_cancel"
            android:textColor="@android:color/white"/>
        <Button
            android:id="@+id/ok_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textStyle="bold"
            android:background="@drawable/counter_red_bg"
            style="@style/PrincipalTextStyle"
            android:text="@string/edit_product_confirm"
            android:textColor="@android:color/white" />
    </LinearLayout>


</LinearLayout>