<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fab8b8"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fab8b8"
        android:padding="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/item_bg"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:padding="10dp"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/group_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_sale_group"
                style="@style/PrincipalTextStyle"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:paddingRight="5dp"/>
            <EditText
                android:id="@+id/group_alt_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/group_title"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:paddingLeft="5dp"
                android:textStyle="italic"
                android:background="@drawable/item_bg"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                style="@style/SecondaryTextStyle"
                android:hint="@string/edit_sale_group_msg"
                android:visibility="gone"/>
            <Spinner
                android:id="@+id/group_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/group_title"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:paddingLeft="5dp"
                android:textStyle="italic"

                android:background="@drawable/item_bg"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                style="@style/SecondaryTextStyle"
                android:text="@string/edit_sale_group_msg"
                android:visibility="visible"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:padding="10dp"
            android:gravity="center_vertical">
            <Button
                android:id="@+id/ok_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="15dp"
                android:textStyle="bold"
                android:background="@drawable/counter_red_bg"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                style="@style/PrincipalTextStyle"
                android:text="@string/edit_product_confirm"
                android:textColor="@android:color/white" />
            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="15dp"
                android:textStyle="bold"
                android:background="@drawable/counter_red_bg"
                android:layout_toLeftOf="@id/ok_button"
                android:layout_centerVertical="true"
                style="@style/PrincipalTextStyle"
                android:text="@string/edit_product_cancel"
                android:textColor="@android:color/white"/>
        </RelativeLayout>


    </LinearLayout>
</ScrollView>