<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/menubg"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2.5"
                android:orientation="horizontal">
                <ImageView
                    android:src="@drawable/reselling_home_logo"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:layout_width="0dp"
                    android:layout_weight="6.5" />
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.6"></RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/primary_dark_material_dark"
        android:layout_weight="1"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/purchasesButton"
            android:clickable="true"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center">
            <ImageView
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/purchases"/>
            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:background="@android:color/transparent"
                android:textColor="#FFFFFF"
                android:text="@string/purchases_main_title"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/salesButton"
            android:clickable="true"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center">
            <ImageView
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/sales"/>
            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:background="@android:color/transparent"
                android:textColor="#FFFFFF"
                android:text="@string/sales_main_title"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/statsButton"
            android:clickable="true"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center">
            <ImageView
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/stats"/>
            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:background="@android:color/transparent"
                android:textColor="#FFFFFF"
                android:text="@string/stats_main_title"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/primary_dark_material_dark"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/clientsButton"
            android:clickable="true"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            >
            <ImageView
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/clients"/>
            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:background="@android:color/transparent"
                android:textColor="#FFFFFF"
                android:text="@string/clients_main_title"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/productsButton"
            android:clickable="true"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center">
            <ImageView
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/products"/>
            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:background="@android:color/transparent"
                android:textColor="#FFFFFF"
                android:text="@string/products_main_title"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/settingsButton"
            android:clickable="true"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center">
            <ImageView
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/settings"/>
            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:background="@android:color/transparent"
                android:textColor="#FFFFFF"
                android:text="@string/settings_main_title"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>